--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,17 @@
                     <archive>
                         <!--<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>-->
                         <manifest>
-                            <mainClass>net.freeutils.httpserver.HTTPServer</mainClass>
+                            <mainClass>com.bewsoftware.httpserver.HTTPServer</mainClass>
                         </manifest>
                     </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <debug>false</debug>
                 </configuration>
             </plugin>
         </plugins>
