--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!--    <parent>
-        <groupId>net.freeutils</groupId>
-        <artifactId>parent</artifactId>
-        <version>1.3</version>
-        <relativePath>../parent/pom.xml</relativePath>
-    </parent>-->
-
-    <groupId>net.freeutils</groupId>
+    <groupId>com.bewsoftware</groupId>
     <artifactId>jlhttp</artifactId>
-    <version>2.5.2</version>
+    <version>2.5.3</version>
     <packaging>jar</packaging>
 
     <name>JLHTTP</name>
@@ -21,8 +14,8 @@
     <url>http://www.freeutils.net/source/jlhttp/</url>
     <licenses>
         <license>
-            <name>GNU General Public License (GPL), Version 2.0</name>
-            <url>http://www.gnu.org/licenses/gpl-2.0.html</url>
+            <name>GNU General Public License (GPL), Version 3.0</name>
+            <url>http://www.gnu.org/licenses/gpl-3.0.html</url>
         </license>
         <license>
             <name>Commercial License</name>
