--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.bewsoftware</groupId>
     <artifactId>bewsoftware-jlhttp</artifactId>
-    <version>2.5.5</version>
+    <version>2.5.6</version>
     <packaging>jar</packaging>
 
     <name>BEWSoftware JLHTTP</name>
@@ -565,7 +565,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <debug>false</debug>
+                    <debug>true</debug>
                     <showDeprecation>true</showDeprecation>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
