--- a/pom.xml
+++ b/pom.xml
@@ -421,7 +421,7 @@
                 <plugin>
                     <groupId>com.bewsoftware.mojo</groupId>
                     <artifactId>bewsoftware-mdj-plugin</artifactId>
-                    <version>0.29.9</version>
+                    <version>1.0.31-SNAPSHOT</version>
                 </plugin>                
                 <plugin>                        
                     <groupId>com.bew.mojo</groupId>
