--- a/pom.xml
+++ b/pom.xml
@@ -853,7 +853,13 @@
             </plugin>
         </plugins>
     </build>
-
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>bewsoftware-utils</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+    </dependencies>
     <reporting>
         <plugins>
             <plugin>
