--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,14 @@
 
     <groupId>com.bewsoftware</groupId>
     <artifactId>bewsoftware-jlhttp</artifactId>
-    <version>2.6.3-SNAPSHOT</version>
+    <version>2.6.4</version>
     <packaging>jar</packaging>
 
     <name>BEWSoftware JLHTTP Server</name>
     <description>The Java Lightweight HTTP Server</description>
+
     <url>http://www.freeutils.net/source/jlhttp/</url>
+
     <licenses>
         <license>
             <name>GNU General Public License (GPL), Version 3.0</name>
@@ -39,9 +41,29 @@
         <skip.version.build>false</skip.version.build>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>bewsoftware-utils</artifactId>
+        </dependency>
+    </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>bewsoftware-utils</artifactId>
+                <version>2.0.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <profiles>
         <profile>
             <id>manual-clean</id>
+            <properties>
+                <skip.version.build>true</skip.version.build>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -65,6 +87,9 @@
 
         <profile>
             <id>manual-compile</id>
+            <properties>
+                <skip.version.build>true</skip.version.build>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -90,6 +115,9 @@
 
         <profile>
             <id>manual-clean-compile</id>
+            <properties>
+                <skip.version.build>true</skip.version.build>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -105,7 +133,7 @@
                                 <configuration>
                                     <source>${docs.source}</source>
                                     <destination>${docs.target}</destination>
-                                    <verbosity/>
+                                    <verbosity>3</verbosity>
                                 </configuration>
                             </execution>
                         </executions>
@@ -116,6 +144,9 @@
 
         <profile>
             <id>manual-display-mdj</id>
+            <properties>
+                <skip.version.build>true</skip.version.build>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -137,6 +168,9 @@
 
         <profile>
             <id>publish-all</id>
+            <properties>
+                <skip.version.build>true</skip.version.build>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -177,6 +211,9 @@
 
         <profile>
             <id>manual-publish</id>
+            <properties>
+                <skip.version.build>true</skip.version.build>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -209,6 +246,9 @@
 
         <profile>
             <id>manual-clean-publish</id>
+            <properties>
+                <skip.version.build>true</skip.version.build>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -242,6 +282,9 @@
 
         <profile>
             <id>publish-api</id>
+            <properties>
+                <skip.version.build>true</skip.version.build>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -271,6 +314,9 @@
 
         <profile>
             <id>manual-package</id>
+            <properties>
+                <skip.version.build>true</skip.version.build>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -533,14 +579,14 @@
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
                 <includes>
-                    <include>**/mcpom.properties</include>
+                    <include>**/bjspom.properties</include>
                 </includes>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>false</filtering>
                 <excludes>
-                    <exclude>**/mcpom.properties</exclude>
+                    <exclude>**/bjspom.properties</exclude>
                 </excludes>
             </resource>
             <resource>
@@ -590,12 +636,12 @@
                 <plugin>
                     <groupId>com.bewsoftware.mojo</groupId>
                     <artifactId>bewsoftware-mdj-plugin</artifactId>
-                    <version>1.1.7</version>
+                    <version>2.0.0-SNAPSHOT</version>
                 </plugin>
                 <plugin>
                     <groupId>com.bewsoftware.mojo</groupId>
                     <artifactId>bewsoftware-version-plugin</artifactId>
-                    <version>1.0.2</version>
+                    <version>1.1.0</version>
                 </plugin>
 
                 <plugin>
@@ -853,13 +899,7 @@
             </plugin>
         </plugins>
     </build>
-    <dependencies>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>bewsoftware-utils</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-    </dependencies>
+
     <reporting>
         <plugins>
             <plugin>
